# sq

./: Cargo.toml  README.md
src/: config.rs  main.rs  prefixes.rs
