[package]
name = "sq"
version = "0.1.0"
edition = "2024"
description = "Fast SPARQL client for a QLever endpoint — auto-prefixes, readable output, built-ins. The endpoint companion to sop/rvv."
license = "Apache-2.0"

[[bin]]
name = "sq"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
comfy-table = "7"
terminal_size = "0.4"
dirs = "6"
libc = "0.2"

[profile.release]
strip = true
lto = true
